# AI_LAB

./: .gitignore  assignment2.py  assignment3.py  class2.py  fcnn.py  mnist_fcnn.py  pyproject.toml
codes/: data_augmentation.ipynb  odd-even.ipynb  shoe.ipynb
final_assignment/: a10.ipynb  a10.py  a12.ipynb  a12.py  a2.py  a3.ipynb  a3.py  a4.ipynb  a4.py  a5.ipynb  a5.py  a6.ipynb  a6.py  a7.ipynb  a7.py  a8.ipynb  a8.py  a9.py  a9_v2.ipynb
